[package]
name = "heliocron"
version = "0.7.0"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
description = """
heliocron is a command line application written in Rust capable of delaying execution of other 
programs for time periods relative to sunrise and sunset.
"""
documentation = "https://github.com/mfreeborn/heliocron"
homepage = "https://github.com/mfreeborn/heliocron"
repository = "https://github.com/mfreeborn/heliocron"
keywords = ["cron", "crontab", "sunrise", "unix", "scheduler"]
categories = ["command-line-utilities", "date-and-time"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
integration-test = []

[dependencies]
chrono = "0.4"
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-walltime =  "0.1.2"
toml = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
