[package]
name = "heliocron"
version = "0.8.1"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
description = "A simple program for calculating sunrise, sunset and related times, which can be integrated with cron to trigger other programs to run when these events occur"
documentation = "https://github.com/mfreeborn/heliocron"
homepage = "https://github.com/mfreeborn/heliocron"
repository = "https://github.com/mfreeborn/heliocron"
keywords = ["cron", "crontab", "sunrise", "unix", "scheduler"]
categories = ["command-line-utilities", "date-and-time"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
integration-test = []

[dependencies]
chrono = "0.4"
crossterm = "0.24.0"
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-walltime =  "0.1.2"
toml = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
