[package]
name = "heliocron"
version = "0.8.1"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
description = "A simple program for calculating sunrise, sunset and related times, which can be integrated with cron to trigger other programs to run when these events occur"
documentation = "https://github.com/mfreeborn/heliocron"
homepage = "https://github.com/mfreeborn/heliocron"
repository = "https://github.com/mfreeborn/heliocron"
keywords = ["cron", "crontab", "sunrise", "unix", "scheduler"]
categories = ["command-line-utilities", "date-and-time"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"
exclude = ["assets/"]

[features]
integration-test = []

[dependencies]
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
crossterm = "0.24.0"
dirs = "4"
errno = "0.3.12"
libc = "0.2.172"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
